--- a/index.html
+++ b/index.html
@@ -5,26 +5,52 @@
         <meta name="author" content="Ryan Pallas">
         <!-- TODO: create description -->
         <meta name="description" content="Enter description here">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
         <!-- TODO: create favicon -->
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         <title>Wok Asian Cuisine</title>
     </head>
     <body>
         <header>
+            <h1><a href="index.html">Wok Asian Cuisine</a></h1>
             <nav>
-                
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Our Menu</a></li>
+                    <li><a href="#">Order Now</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
             </nav>
         </header>
         <main>
-            <section>
-
+            <!-- TODO: alt text -->
+            <img class="header-img" src="images/header-img.png" alt="Text here">
+            <section class="intro">
+                <h2>Modern Fusion Bar & Kitchen</h2>
+                <a class="our-menu" href="#">Our Menu</a>
+            </section>
+            <section class="cater">
+                <h3>Cater With Us</h3>
+                <p>We cater weddings, business launches, dinners, and more. Call us to discuss how we can be a part of your next event.</p>
+            </section>
+            <section class="grid local">
+                <!-- TODO: alt text -->
+                <img src="images/local.jpg" alt="">
+                <h3>Local Cuisine</h3>
+                <p>We refuse to compromise on quality. Our fresh ingredients are local and we are committed to serving fresh cuisine.</p>
+            </section>
+            <section class="grid chef">
+                <!-- TODO: alt text -->
+                <img src="images/chef.jpg" alt="">
+                <h3>Chef Ly</h3>
+                <p>With 20 years of experience cooking in the finest restaurants, Chef Ly is committed to serving fresh food and unique experiences.</p>
             </section>
         </main>
         <footer>
-            <section>
-
-            </section>
+            <h3>Wok Asian Cuisine</h3>
+            <p>Copyright &copy; 2022 Wok - All Rights Reserved</p>
+            <p>This site is for educational purposes only</p>
         </footer>
     </body>
 </html>
