--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <h1><a href="index.html">Wok Asian Cuisine</a></h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Our Menu</a></li>
-                    <li><a href="#">Order Now</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a class="home-nav" href="index.html">Home</a></li>
+                    <li><a class="menu-nav" href="#">Our Menu</a></li>
+                    <li><a class="order-nav" href="#">Order Now</a></li>
+                    <li><a class="contact-nav" href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </header>
