contact page form styling

--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
         <!-- TODO: create description -->
         <meta name="description" content="Enter description here">
         <link rel="stylesheet" href="styles.css">
-        <!-- TODO: create favicon -->
+        <!-- TODO: favicon not showing up in Safari -->
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <title>Wok Asian Cuisine</title>
     </head>
     <body>
+        <!-- TODO: div#wrapper -->
         <header>
             <h1><a href="index.html">Wok Asian Cuisine</a></h1>
             <nav>
                 <ul>
-                    <li><a class="home-nav" href="index.html">Home</a></li>
+                    <li><a class="home-nav home-page-nav" href="index.html">Home</a></li>
                     <li><a class="menu-nav" href="#">Our Menu</a></li>
                     <li><a class="order-nav" href="#">Order Now</a></li>
                     <li><a class="contact-nav" href="contact.html">Contact Us</a></li>
