--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,10 @@
         <!-- TODO: create description -->
         <meta name="description" content="Enter description here">
         <link rel="stylesheet" href="styles.css">
-        <!-- TODO: create favicon -->
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <!-- TODO: favicon not showing up in Safari -->
+        <link rel="apple-touch-icon" href="favicon.ico" type="image/x-icon">
         <title>Wok Asian Cuisine | Contact</title>
     </head>
     <body>
@@ -18,28 +20,32 @@
                     <li><a class="home-nav" href="index.html">Home</a></li>
                     <li><a class="menu-nav" href="#">Our Menu</a></li>
                     <li><a class="order-nav" href="#">Order Now</a></li>
-                    <li><a class="contact-nav" href="contact.html">Contact Us</a></li>
+                    <li><a class="contact-nav contact-page-nav" href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </header>
         <main class="contact-main">
-            <!-- <div class="intro-background"> -->
-                <h2 class="contact-h2">Contact Us</h2>
-                <p class="contact-p">Do you have dietary concerns? Questions about an upcoming event? Drop us a line, and we'll get back to you soon!</p>
-            <!-- </div> -->
+            <h2 class="contact-h2">Contact Us</h2>
+            <p class="contact-p">Do you have dietary concerns? Questions about an upcoming event? Drop us a line, and we'll get back to you soon!</p>
 
             <!-- TODO: alt text -->
             <img class="contact-img" src="images/contact-img-optional1.jpg" alt="">
             <form action="https://wp.zybooks.com/form-viewer.php" method="POST">
-                <label for="user-name">Name:*</label>
-                <input type="text" name="user-name" id="user-name" required>
+                <div class="contact-name">
+                    <label for="user-name">Name:*</label>
+                    <input type="text" name="user-name" id="user-name" required>
+                </div>
 
-                <label for="user-address">Address:</label>
-                <input type="text" name="user-address" id="user-address">
+                <div class="contact-address">
+                    <label for="user-address">Address:</label>
+                    <input type="text" name="user-address" id="user-address">
+                </div>
 
-                <label for="user-city">City:</label>
-                <input type="text" name="user-city" id="user-city">
-                
+                <div class="contact-city">
+                    <label for="user-city">City:</label>
+                    <input type="text" name="user-city" id="user-city">
+                </div>
+
                 <select name="user-state" id="user-state">
                     <option value="">Choose Your State</option>
                     <option value="al">AL</option>
@@ -95,16 +101,23 @@
                     <option value="wy">WY</option>
                 </select>
 
-                <label for="user-zip">Zip:</label>
-                <input type="number" name="user-zip" id="user-zip">
+                <div class="contact-zip">
+                    <label for="user-zip">Zip:</label>
+                    <input type="number" name="user-zip" id="user-zip">
+                </div>
 
-                <label for="user-phone">Phone:*</label>
-                <input type="tel" name="user-phone" id="user-phone" required>
+                <div class="contact-phone">
+                    <label for="user-phone">Phone:*</label>
+                    <input type="tel" name="user-phone" id="user-phone" required>
+                </div>
 
-                <label for="user-email">Email:*</label>
-                <input type="email" name="user-email" id="user-email" required>
+                <div class="contact-email">
+                    <label for="user-email">Email:*</label>
+                    <input type="email" name="user-email" id="user-email" required>
+                </div>
+   
 
-                <fieldset>
+                <fieldset class="contact-pref">
                     <legend>Preferred Method of Contact</legend>
                     <label for="prefer-email">Email</label>
                     <input type="radio" name="prefer" id="prefer-email" checked>
@@ -113,8 +126,10 @@
                     <input type="radio" name="prefer" id="prefer-tel">
                 </fieldset>
 
-                <label for="user-comments">Comments:</label>
-                <textarea name="user-comments" id="user-comments" cols="15" rows="6"></textarea>
+                <div class="contact-comments">
+                    <label for="user-comments">Comments:</label>
+                    <textarea name="user-comments" id="user-comments" cols="30" rows="7"></textarea>
+                </div>
 
                 <input type="submit" value="Submit">
             </form>
