--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,11 @@
         <!-- TODO: create description -->
         <meta name="description" content="Enter description here">
         <link rel="stylesheet" href="styles.css">
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+		<!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link rel="icon" href="favicon.ico" type="image/x-icon"> -->
+        <link rel="shortcut icon" href="favicon-2.ico" type="image/x-icon">
+		<link rel="icon" href="favicon-2.ico" type="image/x-icon">
         <!-- TODO: favicon not showing up in Safari -->
-        <link rel="apple-touch-icon" href="favicon.ico" type="image/x-icon">
         <title>Wok Asian Cuisine | Contact</title>
     </head>
     <body>
