--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
         <meta name="description" content="Enter description here">
         <link rel="stylesheet" href="styles.css">
         <!-- TODO: favicon not showing up in Safari -->
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+		<!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link rel="icon" href="favicon.ico" type="image/x-icon"> -->
+        <link rel="shortcut icon" href="favicon-2.ico" type="image/x-icon">
+		<link rel="icon" href="favicon-2.ico" type="image/x-icon">
+
         <title>Wok Asian Cuisine</title>
     </head>
     <body>
-        <!-- TODO: div#wrapper -->
+        <!-- TODO: div#wrapper? -->
         <header>
             <h1><a href="index.html">Wok Asian Cuisine</a></h1>
             <nav>
