added alt text for home page and more bux fixes

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
         <!-- TODO: create description -->
         <meta name="description" content="Enter description here">
         <link rel="stylesheet" href="styles.css">
-        <!-- TODO: favicon not showing up in Safari -->
-		<!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-		<link rel="icon" href="favicon.ico" type="image/x-icon"> -->
-        <link rel="shortcut icon" href="favicon-2.ico" type="image/x-icon">
-		<link rel="icon" href="favicon-2.ico" type="image/x-icon">
-
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicon_package/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon_package/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon_package/favicon-16x16.png">
+        <link rel="manifest" href="/favicon_package/site.webmanifest">
+        <link rel="mask-icon" href="/favicon_package/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
         <title>Wok Asian Cuisine</title>
     </head>
     <body>
-        <!-- TODO: div#wrapper? -->
         <header>
             <h1><a href="index.html">Wok Asian Cuisine</a></h1>
             <nav>
@@ -28,8 +28,7 @@
             </nav>
         </header>
         <main>
-            <!-- TODO: alt text -->
-            <img class="header-img" src="images/header-img.png" alt="Text here">
+            <img class="header-img" src="images/header-img.png" alt="A wooden bowl with two chopsticks laying across it and 3 dumplings with sesame seeds on top">
             <section class="intro">
                 <h2>Modern Fusion Bar & Kitchen</h2>
                 <a class="our-menu" href="#">Our Menu</a>
@@ -39,14 +38,13 @@
                 <p>We cater weddings, business launches, dinners, and more. Call us to discuss how we can be a part of your next event.</p>
             </section>
             <section class="grid local">
-                <!-- TODO: alt text -->
-                <img src="images/local.jpg" alt="">
+                <img src="images/local.jpg" alt="A spread of asian cuisine in bowls on top of wooden circles and a tea pot on the side">
                 <h3>Local Cuisine</h3>
                 <p>We refuse to compromise on quality. Our fresh ingredients are local and we are committed to serving fresh cuisine.</p>
             </section>
             <section class="grid chef">
                 <!-- TODO: alt text -->
-                <img src="images/chef.jpg" alt="">
+                <img src="images/chef.jpg" alt="A chef preparing a dish in a bowl and is surrounded by various ingredients in bowls">
                 <h3>Chef Ly</h3>
                 <p>With 20 years of experience cooking in the finest restaurants, Chef Ly is committed to serving fresh food and unique experiences.</p>
             </section>
