--- a/contact.html
+++ b/contact.html
@@ -30,25 +30,20 @@
         <main class="contact-main">
             <h2 class="contact-h2">Contact Us</h2>
             <p class="contact-p">Do you have dietary concerns? Questions about an upcoming event? Drop us a line, and we'll get back to you soon!</p>
-
-            <!-- TODO: alt text -->
-            <img class="contact-img" src="images/contact-img-optional1.jpg" alt="">
+            <img class="contact-img" src="images/contact-img.jpg" alt="A table with a row of white tea cups with dark marble plates underneath them and a variety of other decorative items spread across the wooden table">
             <form action="https://wp.zybooks.com/form-viewer.php" method="POST">
                 <div class="contact-name">
                     <label for="user-name">Name:*</label>
                     <input type="text" name="user-name" id="user-name" required>
                 </div>
-
                 <div class="contact-address">
                     <label for="user-address">Address:</label>
                     <input type="text" name="user-address" id="user-address">
                 </div>
-
                 <div class="contact-city">
                     <label for="user-city">City:</label>
                     <input type="text" name="user-city" id="user-city">
                 </div>
-
                 <select name="user-state" id="user-state">
                     <option value="">Choose Your State</option>
                     <option value="al">AL</option>
@@ -103,23 +98,18 @@
                     <option value="wi">WI</option>
                     <option value="wy">WY</option>
                 </select>
-
                 <div class="contact-zip">
                     <label for="user-zip">Zip:</label>
                     <input type="number" name="user-zip" id="user-zip">
                 </div>
-
                 <div class="contact-phone">
                     <label for="user-phone">Phone:*</label>
                     <input type="tel" name="user-phone" id="user-phone" required>
                 </div>
-
                 <div class="contact-email">
                     <label for="user-email">Email:*</label>
                     <input type="email" name="user-email" id="user-email" required>
                 </div>
-   
-
                 <fieldset class="contact-pref">
                     <legend>Preferred Method of Contact</legend>
                     <label for="prefer-email">Email</label>
@@ -128,12 +118,10 @@
                     <label for="prefer-tel">Phone</label>
                     <input type="radio" name="prefer" id="prefer-tel">
                 </fieldset>
-
                 <div class="contact-comments">
                     <label for="user-comments">Comments:</label>
                     <textarea name="user-comments" id="user-comments" cols="30" rows="7"></textarea>
                 </div>
-
                 <input type="submit" value="Submit">
             </form>
         </main>
