--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="author" content="Ryan Pallas">
-        <!-- TODO: create description -->
-        <meta name="description" content="Enter description here">
+        <meta name="description" content="Have any questions, comments, or concerns about Wok Asian Cuisine? Submit a form to let us know so that we can improve your future experiences.">
         <link rel="stylesheet" href="styles.css">
-        <link rel="apple-touch-icon" sizes="180x180" href="/favicon_package/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon_package/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon_package/favicon-16x16.png">
-        <link rel="manifest" href="/favicon_package/site.webmanifest">
-        <link rel="mask-icon" href="/favicon_package/safari-pinned-tab.svg" color="#5bbad5">
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="theme-color" content="#ffffff">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         <title>Wok Asian Cuisine | Contact</title>
     </head>
     <body>
