--- a/index.html
+++ b/index.html
@@ -3,16 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="author" content="Ryan Pallas">
-        <!-- TODO: create description -->
-        <meta name="description" content="Enter description here">
+        <meta name="description" content="Enjoy catering or a meal from Wok Asian Cuisine who offers quality local cuisine prepared by Chef Ly who is committed to serving fresh food and unique experiences.">
         <link rel="stylesheet" href="styles.css">
-        <link rel="apple-touch-icon" sizes="180x180" href="/favicon_package/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon_package/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon_package/favicon-16x16.png">
-        <link rel="manifest" href="/favicon_package/site.webmanifest">
-        <link rel="mask-icon" href="/favicon_package/safari-pinned-tab.svg" color="#5bbad5">
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="theme-color" content="#ffffff">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         <title>Wok Asian Cuisine</title>
     </head>
     <body>
@@ -43,7 +37,6 @@
                 <p>We refuse to compromise on quality. Our fresh ingredients are local and we are committed to serving fresh cuisine.</p>
             </section>
             <section class="grid chef">
-                <!-- TODO: alt text -->
                 <img src="images/chef.jpg" alt="A chef preparing a dish in a bowl and is surrounded by various ingredients in bowls">
                 <h3>Chef Ly</h3>
                 <p>With 20 years of experience cooking in the finest restaurants, Chef Ly is committed to serving fresh food and unique experiences.</p>
