--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="home-page">
+        <main class="home-main">
             <img class="header-img" src="images/header-img.png" alt="A wooden bowl with two chopsticks laying across it and 3 dumplings with sesame seeds on top">
             <section class="intro">
                 <h2>Modern Fusion Bar & Kitchen</h2>
